# apollofft

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  _gen.py  _t.txt  _test.py  _test2.rs  _test3.rs  _test4.rs  _test_chunk.rs  _test_chunk2.rs  _test_ps.txt  apollo_status.txt  backlog.md  benchmark_results.md  checklist.md  gap_audit.md  gen_kernels.py  mixed_radix_full.rs  test_rust.rs  test_single.txt  tmp_patch_ntt.py  validation_output.json  validation_output2.json  write_ntt_dim.py
crates/apollo-cudatile/: Cargo.toml  README.md
crates/apollo-cudatile/src/: lib.rs
crates/apollo-cudatile/src/application/: mod.rs
crates/apollo-czt/: Cargo.toml  README.md
crates/apollo-czt/src/: lib.rs
crates/apollo-dctdst/: Cargo.toml  README.md
crates/apollo-dctdst-wgpu/: Cargo.toml  README.md
crates/apollo-dctdst-wgpu/src/: lib.rs  verification.rs
crates/apollo-dctdst-wgpu/src/application/: plan.rs
crates/apollo-dctdst-wgpu/src/domain/: capabilities.rs  error.rs
crates/apollo-dctdst-wgpu/src/infrastructure/: device.rs  kernel.rs  mod.rs
crates/apollo-dctdst/src/: lib.rs
crates/apollo-dctdst/src/application/: mod.rs
crates/apollo-dctdst/src/domain/: mod.rs
crates/apollo-dctdst/src/infrastructure/: mod.rs
crates/apollo-dctdst/src/verification/: mod.rs
crates/apollo-dht/: Cargo.toml  README.md
crates/apollo-dht/src/: lib.rs
crates/apollo-dht/src/application/: mod.rs
crates/apollo-dht/src/domain/: mod.rs
crates/apollo-dht/src/infrastructure/: mod.rs
crates/apollo-dht/src/verification/: mod.rs
crates/apollo-fft/: Cargo.toml  README.md
crates/apollo-fft-wgpu/: Cargo.toml  README.md
crates/apollo-fft-wgpu/benches/: buffer_reuse.rs
crates/apollo-fft-wgpu/src/: lib.rs
crates/apollo-fft-wgpu/src/application/: mod.rs
crates/apollo-fft-wgpu/src/validation/: batched_matrix.rs  mod.rs
crates/apollo-fft/benches/: kernel_strategy.rs  vs_rustfft.rs
crates/apollo-fft/examples/: composite_bench.rs
crates/apollo-fft/src/: lib.rs  lib_tests.rs
crates/apollo-fft/src/application/: mod.rs
crates/apollo-fft/src/domain/: mod.rs
crates/apollo-fft/src/infrastructure/: mod.rs
crates/apollo-fwht-wgpu/: Cargo.toml  README.md
crates/apollo-fwht-wgpu/src/: lib.rs  verification.rs
crates/apollo-fwht-wgpu/src/application/: plan.rs
crates/apollo-fwht-wgpu/src/domain/: capabilities.rs  error.rs
crates/apollo-fwht-wgpu/src/infrastructure/: device.rs  kernel.rs  mod.rs
crates/apollo-mellin/: Cargo.toml  README.md
crates/apollo-mellin-wgpu/: Cargo.toml  README.md
crates/apollo-mellin-wgpu/src/: lib.rs  verification.rs
crates/apollo-mellin-wgpu/src/application/: plan.rs
crates/apollo-mellin-wgpu/src/domain/: capabilities.rs  error.rs
crates/apollo-mellin-wgpu/src/infrastructure/: device.rs  kernel.rs  mod.rs
crates/apollo-mellin/proptest-regressions/verification/: mod.txt
crates/apollo-mellin/src/: lib.rs
crates/apollo-mellin/src/application/: mod.rs
crates/apollo-mellin/src/domain/: mod.rs
crates/apollo-mellin/src/infrastructure/: mod.rs
crates/apollo-mellin/src/verification/: mod.rs
crates/apollo-ntt-wgpu/: Cargo.toml  README.md
crates/apollo-ntt-wgpu/src/: lib.rs  verification.rs
crates/apollo-ntt-wgpu/src/application/: plan.rs
crates/apollo-ntt-wgpu/src/domain/: capabilities.rs  error.rs
crates/apollo-ntt-wgpu/src/infrastructure/: device.rs  kernel.rs  mod.rs
crates/apollo-nufft/: Cargo.toml  README.md
crates/apollo-nufft-wgpu/: Cargo.toml  README.md
crates/apollo-nufft-wgpu/benches/: buffer_reuse.rs
crates/apollo-nufft-wgpu/src/: lib.rs  verification.rs
crates/apollo-nufft-wgpu/src/application/: mod.rs  plan.rs
crates/apollo-nufft-wgpu/src/domain/: capabilities.rs  error.rs  mod.rs
crates/apollo-nufft-wgpu/src/infrastructure/: device.rs  kernel.rs  mod.rs
crates/apollo-nufft/src/: lib.rs
crates/apollo-nufft/src/application/: mod.rs
crates/apollo-nufft/src/domain/: mod.rs
crates/apollo-nufft/src/infrastructure/: mod.rs
crates/apollo-nufft/src/verification/: mod.rs
crates/apollo-python/: Cargo.toml  README.md
crates/apollo-python/python/pyapollofft/: __init__.py
crates/apollo-python/src/: lib.rs
crates/apollo-python/tests/: benchmark_vs_numpy.py  test_smoke.py
crates/apollo-qft/: Cargo.toml  README.md
crates/apollo-qft-wgpu/: Cargo.toml  README.md
crates/apollo-qft-wgpu/src/: lib.rs  verification.rs
crates/apollo-qft-wgpu/src/application/: plan.rs
crates/apollo-qft-wgpu/src/domain/: capabilities.rs  error.rs
crates/apollo-qft-wgpu/src/infrastructure/: device.rs  kernel.rs  mod.rs
crates/apollo-qft/src/: lib.rs
crates/apollo-qft/src/application/: mod.rs
crates/apollo-qft/src/domain/: mod.rs
crates/apollo-qft/src/infrastructure/: mod.rs
crates/apollo-qft/src/verification/: mod.rs
crates/apollo-sdft/: Cargo.toml  README.md
crates/apollo-sdft/src/: lib.rs
crates/apollo-sdft/src/application/: mod.rs
crates/apollo-sdft/src/domain/: mod.rs
crates/apollo-sdft/src/infrastructure/: mod.rs
crates/apollo-sdft/src/verification/: mod.rs
crates/apollo-sht/: Cargo.toml  README.md
crates/apollo-sht/src/: lib.rs
crates/apollo-stft/: Cargo.toml  README.md
crates/apollo-stft-wgpu/: Cargo.toml  README.md
crates/apollo-stft-wgpu/benches/: stft_bench.rs
crates/apollo-stft-wgpu/src/: lib.rs  verification.rs
crates/apollo-stft/docs/: adr-0001-typed-workspace-and-alias-removal.md
crates/apollo-stft/src/: lib.rs
crates/apollo-validation/: Cargo.toml  README.md
crates/apollo-validation/benches/: vs_rustfft.rs
crates/apollo-validation/scripts/: numpy_fft_probe.py
crates/apollo-validation/src/: lib.rs  main.rs
crates/apollofft/: Cargo.toml
crates/apollofft-cudatile/: Cargo.toml
crates/apollofft-cudatile/src/: lib.rs
crates/apollofft-wgpu/: Cargo.toml
crates/apollofft-wgpu/src/: lib.rs
crates/apollofft/src/: backend.rs  error.rs  lib.rs  nufft.rs  plan.rs  types.rs
crates/pyapollofft/: Cargo.toml  README.md  pyproject.toml
crates/pyapollofft/src/: lib.rs
crates/pyapollofft/tests/: test_smoke.py
(+592 files in other folders)
