[workspace]
members = [
    "crates/apollo",
    "crates/apollofft-wgpu",
    "crates/apollofft-cudatile",
    "crates/apollo-validation",
    "crates/pyapollofft",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
bytemuck = { version = "1.19", features = ["derive"] }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
numpy = "0.23"
once_cell = "1.19"
parking_lot = "0.12"
pollster = "0.4"
proptest = "1.6"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
rayon = "1.10"
realfft = "3.5"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wgpu = { version = "26.0", features = ["wgsl"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
