[workspace]
members = [
    "crates/apollo-czt",
    "crates/apollo-czt-wgpu",
    "crates/apollo-dctdst",
    "crates/apollo-dctdst-wgpu",
    "crates/apollo-dht",
    "crates/apollo-dht-wgpu",
    "crates/apollo-fft",
    "crates/apollo-frft",
    "crates/apollo-frft-wgpu",
    "crates/apollo-fwht",
    "crates/apollo-fwht-wgpu",
    "crates/apollo-gft",
    "crates/apollo-gft-wgpu",
    "crates/apollo-hilbert",
    "crates/apollo-hilbert-wgpu",
    "crates/apollo-mellin",
    "crates/apollo-mellin-wgpu",
    "crates/apollo-ntt",
    "crates/apollo-ntt-wgpu",
    "crates/apollo-nufft",
    "crates/apollo-qft",
    "crates/apollo-qft-wgpu",
    "crates/apollo-radon",
    "crates/apollo-radon-wgpu",
    "crates/apollo-sdft",
    "crates/apollo-sdft-wgpu",
    "crates/apollo-sft",
    "crates/apollo-sft-wgpu",
    "crates/apollo-sht",
    "crates/apollo-sht-wgpu",
    "crates/apollo-stft",
    "crates/apollo-stft-wgpu",
    "crates/apollo-fft-wgpu",
    "crates/apollo-nufft-wgpu",
    "crates/apollo-cudatile",
    "crates/apollo-validation",
    "crates/apollo-wavelet",
    "crates/apollo-wavelet-wgpu",
    "crates/apollo-python",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
bytemuck = { version = "1.19", features = ["derive"] }
nalgebra = "0.33"
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
numpy = "0.23"
once_cell = "1.19"
parking_lot = "0.12"
pollster = "0.4"
proptest = "1.6"
criterion = "0.5"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
rand = "0.8"
rayon = "1.10"
rustfft = "6.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wgpu = { version = "26.0", features = ["wgsl"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
