[workspace]
members = [
    "crates/apollo-czt",
    "crates/apollo-czt-wgpu",
    "crates/apollo-dctdst",
    "crates/apollo-dctdst-wgpu",
    "crates/apollo-dht",
    "crates/apollo-dht-wgpu",
    "crates/apollo-fft",
    "crates/apollo-frft",
    "crates/apollo-frft-wgpu",
    "crates/apollo-fwht",
    "crates/apollo-fwht-wgpu",
    "crates/apollo-gft",
    "crates/apollo-gft-wgpu",
    "crates/apollo-hilbert",
    "crates/apollo-hilbert-wgpu",
    "crates/apollo-mellin",
    "crates/apollo-mellin-wgpu",
    "crates/apollo-ntt",
    "crates/apollo-ntt-wgpu",
    "crates/apollo-nufft",
    "crates/apollo-qft",
    "crates/apollo-qft-wgpu",
    "crates/apollo-radon",
    "crates/apollo-radon-wgpu",
    "crates/apollo-sdft",
    "crates/apollo-sdft-wgpu",
    "crates/apollo-sft",
    "crates/apollo-sft-wgpu",
    "crates/apollo-sht",
    "crates/apollo-sht-wgpu",
    "crates/apollo-stft",
    "crates/apollo-stft-wgpu",
    "crates/apollo-fft-wgpu",
    "crates/apollo-nufft-wgpu",
    "crates/apollo-validation",
    "crates/apollo-wavelet",
    "crates/apollo-wavelet-wgpu",
    "crates/apollo-python",
]
resolver = "2"

[workspace.package]
version = "0.8.2"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
bytemuck = { version = "1.19", features = ["derive"] }
nalgebra = "0.33"
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
numpy = "0.23"
once_cell = "1.19"
parking_lot = "0.12"
pollster = "0.4"
proptest = "1.6"
criterion = "0.5"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
rand = "0.8"
rayon = "1.10"
rustfft = "6.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wgpu = { version = "26.0", features = ["wgsl"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
default_constructed_unit_structs = "allow"
doc_lazy_continuation = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"
manual_is_multiple_of = "allow"
manual_div_ceil = "allow"
manual_slice_size_calculation = "allow"
len_zero = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
range_minus_one = "allow"
default_trait_access = "allow"
useless_conversion = "allow"
from_over_into = "allow"
cast_lossless = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
needless_pass_by_value = "allow"
needless_for_each = "allow"
redundant_closure_for_method_calls = "allow"
format_in_format_args = "allow"
match_like_matches_macro = "allow"
float_cmp = "allow"
unreadable_literal = "allow"
explicit_iter_loop = "allow"
unused_unit = "allow"
semicolon_if_nothing_returned = "allow"
pub_underscore_fields = "allow"
doc_markdown = "allow"
manual_is_power_of_two = "allow"
trivially_copy_pass_by_ref = "allow"
let_and_return = "allow"
match_same_arms = "allow"
single_match = "allow"
single_match_else = "allow"
redundant_field_names = "allow"
needless_return = "allow"
unneeded_field_pattern = "allow"
explicit_write = "allow"
manual_range_contains = "allow"
uninlined_format_args = "allow"
