[package]
name = "apollo-cudatile"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "cudatile backend contract surface for Apollo FFT"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
cudatile = []

[lints]
workspace = true
