[package]
name = "apollo-czt"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Chirp z-transform utilities for Apollo"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = { version = "0.4", features = ["serde"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"
