[package]
name = "apollo-dctdst-wgpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo DCT/DST"

[dependencies]
apollo-dctdst = { path = "../apollo-dctdst" }
bytemuck = { version = "1.19", features = ["derive"] }
pollster = "0.4"
thiserror = "1.0"
wgpu = { version = "26.0", features = ["wgsl"] }

[lints]
workspace = true
