[package]
name = "apollo-dht"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Discrete Hartley Transform plans for real-to-real Apollo signal analysis"

[dependencies]
rayon = "1.10"
thiserror = "1.0"
apollo-fft = { path = "../apollo-fft" }
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true
