[package]
name = "apollo-fft-wgpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU dense FFT backend surface for Apollo"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
bytemuck = { version = "1.19", features = ["derive"] }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
pollster = "0.4"
wgpu = { version = "26.0", features = ["wgsl"] }

[lints]
workspace = true
