[package]
name = "apollo-fft-wgpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU dense FFT backend surface for Apollo"

[features]
default = []
native-f16 = []

[dependencies]
apollo-fft = { path = "../apollo-fft" }
bytemuck = { version = "1.19", features = ["derive"] }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
pollster = "0.4"
wgpu = { version = "26.0", features = ["wgsl"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
half = { version = "2.3", features = ["num-traits"] }

[[bench]]
name = "buffer_reuse"
harness = false

[lints]
workspace = true
