[package]
name = "apollo"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Reusable FFT planning, execution, and cache abstractions for Apollo"

[dependencies]
half = { version = "2.4", features = ["serde"] }
nalgebra = { workspace = true }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
rand = { workspace = true }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
criterion = { workspace = true }
proptest = "1.6"

[[bench]]
name = "kernel_strategy"
harness = false

[lints]
workspace = true
