[package]
name = "apollo-ntt-wgpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo NTT"

[features]
default = []
proptest_gpu = []

[dependencies]
apollo-ntt = { path = "../apollo-ntt" }
bytemuck = { version = "1.19", features = ["derive"] }
pollster = "0.4"
thiserror = "1.0"
wgpu = { version = "26.0", features = ["wgsl"] }

[dev-dependencies]
ndarray = "0.16"
proptest = { workspace = true }

[lints]
workspace = true
