[package]
name = "apollo-nufft-wgpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU NUFFT backend surface for Apollo"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-fft-wgpu = { path = "../apollo-fft-wgpu" }
apollo-nufft = { path = "../apollo-nufft" }
bytemuck = { version = "1.19", features = ["derive"] }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
pollster = "0.4"
thiserror = "1.0"
wgpu = { version = "26.0", features = ["wgsl"] }

[features]
default = []
diagnostics = []
## Enable intermediate GPU grid readbacks after load and IFFT stages for numerical triage.
## This feature is intended for testing and debugging only; it adds GPU→CPU synchronization
## points that would be unacceptable in production pipelines.
debug-readbacks = []

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true
