[package]
name = "apollo-python"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Python bindings for Apollo FFT and NUFFT"

[lib]
name = "pyapollofft"
crate-type = ["cdylib"]

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-nufft = { path = "../apollo-nufft" }
apollo-fft-wgpu = { path = "../apollo-fft-wgpu" }
apollo-dht = { path = "../apollo-dht" }
apollo-fwht = { path = "../apollo-fwht" }
apollo-dctdst = { path = "../apollo-dctdst" }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
numpy = "0.23"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }

[lints]
workspace = true
