[package]
name = "apollo-qft"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Quantum Fourier transform utilities for Apollo"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true
