[package]
name = "apollo-sht"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Spherical harmonic transform plans for Apollo"

[dependencies]
ndarray = "0.16"
num-complex = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true
