[package]
name = "apollo-stft-wgpu"
version = "0.10.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo STFT"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-stft = { path = "../apollo-stft" }
bytemuck = { version = "1.19", features = ["derive"] }
ndarray = "0.16"
num-complex = "0.4"
pollster = "0.4"
thiserror = "1.0"
wgpu = { version = "26.0", features = ["wgsl"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ndarray = "0.16"

[[bench]]
name = "stft_bench"
harness = false

[lints]
workspace = true
