[package]
name = "apollo-validation"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Validation and benchmark surface for Apollo FFT"

[features]
default = ["external-references"]
external-references = ["dep:rustfft"]

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-nufft = { path = "../apollo-nufft" }
apollo-fft-wgpu = { path = "../apollo-fft-wgpu" }
apollo-nufft-wgpu = { path = "../apollo-nufft-wgpu" }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rustfft = { workspace = true, optional = true }
