[package]
name = "apollo-validation"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Validation and benchmark surface for Apollo FFT"

[features]
default = ["external-references"]
external-references = ["dep:rustfft", "dep:criterion"]

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-nufft = { path = "../apollo-nufft" }
apollo-fft-wgpu = { path = "../apollo-fft-wgpu" }
apollo-nufft-wgpu = { path = "../apollo-nufft-wgpu" }
apollo-dctdst = { path = "../apollo-dctdst" }
apollo-dht = { path = "../apollo-dht" }
apollo-ntt = { path = "../apollo-ntt" }
apollo-czt = { path = "../apollo-czt" }
apollo-frft = { path = "../apollo-frft" }
apollo-sdft = { path = "../apollo-sdft" }
apollo-wavelet = { path = "../apollo-wavelet" }
apollo-fwht = { path = "../apollo-fwht" }
apollo-qft = { path = "../apollo-qft" }
apollo-gft = { path = "../apollo-gft" }
apollo-hilbert = { path = "../apollo-hilbert" }
apollo-mellin = { path = "../apollo-mellin" }
apollo-radon = { path = "../apollo-radon" }
apollo-sft = { path = "../apollo-sft" }
apollo-sht = { path = "../apollo-sht" }
apollo-stft = { path = "../apollo-stft" }
nalgebra = "0.33"
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rustfft = { workspace = true, optional = true }
criterion = { workspace = true, optional = true }

[[bench]]
name = "vs_rustfft"
harness = false
required-features = ["external-references"]

[lints]
workspace = true
