[package]
name = "apollofft-cudatile"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "cudatile backend contract surface for Apollo FFT"

[dependencies]
apollofft = { path = "../apollofft" }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
cudatile = []

