[package]
name = "apollofft"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Reusable FFT planning, execution, and cache abstractions for Apollo"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.10"
realfft = "3.5"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"
