[package]
name = "pyapollofft"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Python bindings for Apollo FFT"

[lib]
name = "pyapollofft"
crate-type = ["cdylib"]

[dependencies]
apollo = { path = "../apollo" }
apollofft-wgpu = { path = "../apollofft-wgpu" }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
numpy = "0.23"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
